# phevere

./: .gitignore  DEVELOPMENT.md  FOCUS_DEBUG_ANALYSIS.md  LICENSE  README.md  build.bat  build.ps1  forge.config.js  index.node  package-lock.json  package.json  selection_monitor.node  test-focus-handling.js  webpack.main.config.js  webpack.plugins.js  webpack.renderer.config.js  webpack.rules.js
electron/: package-lock.json  package.json
frontend/: package-lock.json  package.json  tsconfig.json
frontend/data/: dictionary.json
frontend/public/: electron.ts  preload.ts
frontend/src/: App.tsx  Popup.js  global.d.ts  index.js
native/: README.md  package.json
native-addon/: binding.gyp  index.js  package-lock.json  package.json
native-addon/src/: selection_monitor.cpp
native/native/: Cargo.toml
native/native/src/: lib.rs
native/native/src/platform/: macos.rs  mod.rs
rust-native/: Cargo.toml
rust-native/src/: lib.rs
rust-native/src/platform/: linux.rs  macos.rs  windows.rs
src/: index.css  index.html  index.ts  index.ts.bak  popup-new.html  popup.html  preload.ts  renderer.ts
src/services/: base.ts  clipboard.ts  dictionary.ts  native-selection.ts  search.ts  wikipedia.ts
