[package]
name = "native"
version = "0.1.0"
authors = ["xiangyuxiao <xiangyuxiao420@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "native"
crate-type = ["cdylib", "rlib"]

[build]
out-dir = "../"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging"
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.3"
core-graphics = "0.22.3"
objc = "0.2.7"
block = "0.1.0"
accessibility-sys = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13.1" }

[dependencies]
neon = "1"
winapi = { version = "0.3", features = ["winuser"] }
nix = "0.27.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
config = "0.13"

[build-dependencies]
neon-build = "0.9"

[dev-dependencies]
neon = "1"